--- a/css/style.css
+++ b/css/style.css
@@ -2,10 +2,10 @@
  
 body {
     background: linear-gradient(to top right, black, gray);
-    height: 95vh;
+    height: 100vh;
     
     background-repeat: no-repeat;
-    
+    overflow-y: hidden;
     
 }
 
@@ -27,8 +27,8 @@ h1 {
     font-weight: bold;
     font-style: normal;
     color: white;
-    font-size: 50pt;
-    padding-left: 40px;
+    font-size: 35pt;
+    padding-left: 10px;
     margin-top: 40px;
 }
 
@@ -40,14 +40,14 @@ h1 {
 
 .menubar {
     background: gray;
-    height:90px;
+    height:70px;
     width: 100%;
 }
 
 .runningtime {
     float: left;
     background: white;
-    width: 18%;
+    width: 15%;
     height: 50px;
     margin: 1%;
     margin-top: 1.3%;
@@ -65,9 +65,9 @@ h1 {
 #movie div {
     background: white;
     width: 17%;
-    height: 40vh;
+    height: 15vh;
     float: left;
-    margin-top: 2%;
+    margin-top: 5%;
     margin-left: 4%;
     margin-right: 4%;
     
