--- a/css/style3.css
+++ b/css/style3.css
@@ -2,7 +2,7 @@ body {
     background: linear-gradient(to top right, black, gray);
     background-size: cover;
     
-    height: 2300px;
+    height: 950px;
     background-repeat: no-repeat;
     
     
@@ -18,8 +18,8 @@ h1 {
     font-weight: bold;
     font-style: normal;
     color: white;
-    font-size: 50pt;
-    padding-left: 40px;
+    font-size: 35pt;
+    padding-left: 10px;
     margin-top: 40px;
 }
 
@@ -36,14 +36,14 @@ h1 a {
 
 .menubar {
     background: gray;
-    height:90px;
+    height:70px;
     width: 100%;
 }
 
 .runningtime {
     float: left;
     background: white;
-    width: 17%;
+    width: 15%;
     height: 50px;
     margin: 1%;
     margin-top: 1.3%;
@@ -67,8 +67,8 @@ a {
 
 .movie-poster {
     background: white;
-    width: 15.53%;
-    height: 43vh;
+    width: 17%;
+    height: 15vh;
     float: left;
     margin-top: 5%;
     margin-left: 4%;
@@ -79,6 +79,10 @@ a {
   .movie-poster img {
     margin-left: 80px;
     padding-top: 120px;
+  }
+
+  #movie-container {
+    padding-top: 15%;
   }
 
 
