--- a/css/style2.css
+++ b/css/style2.css
@@ -3,7 +3,7 @@ body {
     height:100vh;
     width: auto;
     background-repeat: no-repeat;
-    background-size: 370% auto;
+    background-size: 100% 100%;
     overflow-x: hidden;
 }
 
