--- a/css/style2.css
+++ b/css/style2.css
@@ -33,7 +33,7 @@ a {
 }
 .topline {
     height: 10px;
-    
+    width: 100%;
     background: white;
     margin-top: -100px;
     box-shadow: 1px 1px 10px black;
@@ -60,8 +60,8 @@ h2{
 
 .poster {
     background: white;
-    width: 40%;
-    height: 35vh;
+    width: 60vw;
+    height: 65vh;
     margin: 2%;
     margin-top: 15%;
 }
