--- a/css/style2.css
+++ b/css/style2.css
@@ -2,7 +2,7 @@ body {
     background: linear-gradient(to top right, black, gray);
     
     background-repeat: no-repeat;
-    background-size: 500% 500%;
+    background-size: 500% 100%;
     
 }
 
@@ -13,7 +13,7 @@ h1 {
     font-weight: bold;
     font-style: normal;
     color: white;
-    font-size: 65pt;
+    font-size: 75pt;
     padding-left: 10px;
     margin-top: 40px;
     text-shadow: 1px 1px 10px black;
@@ -33,7 +33,7 @@ a {
 }
 .topline {
     height: 10px;
-    width: 100%;
+    width: 500%;
     background: white;
     margin-top: -100px;
     box-shadow: 1px 1px 10px black;
@@ -77,6 +77,8 @@ h3 {
     
     margin-top: -65%;
     width: 47%;
-    margin-right: 5%;
+    margin-right: 0%;
+    margin-left: 50%;
+
 }
 
