--- a/css/style2.css
+++ b/css/style2.css
@@ -76,9 +76,9 @@ h3 {
     float: right;
     
     margin-top: -65%;
-    width: 47%;
+    width: 30vw;
     
-    margin-right: -1000px;
+    margin-right: -800px;
 
 }
 
