--- a/css/style2.css
+++ b/css/style2.css
@@ -3,7 +3,8 @@ body {
     
     background-repeat: no-repeat;
     background-size: 500% 200%;
-    
+    overflow-y: hidden;
+    overflow-x: hidden;
 }
 
 h1 {
