--- a/css/style2.css
+++ b/css/style2.css
@@ -1,11 +1,13 @@
 body {
     background: linear-gradient(to top right, black, gray);
-    
+    height:100vh;
+    background-size: cover;
+    width: auto;
     background-repeat: no-repeat;
-    background-size: 100% auto;
     overflow-y: hidden;
+    width: 100%;
+    background-size: 370% auto;
     overflow-x: hidden;
-    
 }
 
 h1 {
@@ -15,6 +17,10 @@ h1 {
     font-weight: bold;
     font-style: normal;
     color: white;
+    font-size: 50pt;
+    padding-left: 40px;
+    float: left;
+    margin-top: 0px;
     font-size: 35pt;
     padding-left: 10px;
     margin-top: 40px;
@@ -35,8 +41,10 @@ a {
 }
 .topline {
     height: 10px;
-    width: 100%;
+
     background: white;
+    margin-top: 45px;
+
     margin-top: -100px;
     box-shadow: 1px 1px 10px black;
 }
@@ -44,14 +52,12 @@ a {
 .back {
     width: 350px;
     height: 80px;
-
     margin-left: 1150px;
     margin-top: 40px;
     
     background: none;
     border-radius: 20px 20px 20px 20px;
 }
-
 h2{
     float: right;
     font-size: 35pt;
@@ -59,28 +65,31 @@ h2{
     margin-right: 7px;
 }
 
-
 .poster {
     background: white;
-    width: 5vw;
-    height: 5vh;
-    margin: 2%;
-    margin-top: 15%;
+    width: 300px;
+    height: 400px;
+    margin: 50px;
+
+    width: 200px;
+    height: 300px;
+    margin: 10px;
+    margin-top: 50px;
 }
 
 h3 {
     color: white;
+    font-size: 20pt;
     font-size: 15pt;
     background: gray;
-    
+
 }
 #produce {
     float: right;
-    
-    margin-top: -65%;
-    width: 40vw;
-    
-    margin-right: -40px;
+    margin-left: 500px;
+    margin-top: -450px;
 
+    margin-left: 250px;
+    margin-top: -330px;
+    width: 230px;
 }
-
