--- a/css/style2.css
+++ b/css/style2.css
@@ -1,15 +1,12 @@
 body {
     background: linear-gradient(to top right, black, gray);
     height:100vh;
-    background-size: cover;
     width: auto;
+
     background-repeat: no-repeat;
-    overflow-y: hidden;
-    width: 100%;
-    background-size: 370% auto;
+    background-size: 100% 100%;
     overflow-x: hidden;
 }
-
 h1 {
     
     font-family: 'TTTtangsbudaejjigaeB';
@@ -17,16 +14,11 @@ h1 {
     font-weight: bold;
     font-style: normal;
     color: white;
-    font-size: 50pt;
-    padding-left: 40px;
-    float: left;
-    margin-top: 0px;
     font-size: 35pt;
     padding-left: 10px;
     margin-top: 40px;
     text-shadow: 1px 1px 10px black;
 }
-
 a {
     color: white;
     text-decoration: none;
@@ -41,14 +33,11 @@ a {
 }
 .topline {
     height: 10px;
-
+    
     background: white;
-    margin-top: 45px;
-
     margin-top: -100px;
     box-shadow: 1px 1px 10px black;
 }
-
 .back {
     width: 350px;
     height: 80px;
@@ -67,29 +56,22 @@ h2{
 
 .poster {
     background: white;
-    width: 300px;
-    height: 400px;
-    margin: 50px;
-
     width: 200px;
+    width: 45%;
     height: 300px;
     margin: 10px;
     margin-top: 50px;
 }
-
 h3 {
     color: white;
-    font-size: 20pt;
     font-size: 15pt;
     background: gray;
-
+    
 }
 #produce {
     float: right;
-    margin-left: 500px;
-    margin-top: -450px;
-
     margin-left: 250px;
     margin-top: -330px;
     width: 230px;
+    width: 220px;
 }
