--- a/css/style2.css
+++ b/css/style2.css
@@ -1,10 +1,10 @@
 body {
-    background: linear-gradient(to top right, black, gray);
-    height:100vh;
-    
+    background: linear-gradient(to top right, black, white);
+    height: 100vh;
+    background-size: 500% auto;
     background-repeat: no-repeat;
-    background-size: 100% 100%;
-    overflow-x: hidden;
+    overflow-y: hidden;
+    animation: wave 10s linear infinite;
 }
 
 h1 {
@@ -62,7 +62,7 @@ h2{
 .poster {
     background: white;
     width: 40%;
-    height: 36vh;
+    height: 26vh;
     margin: 2%;
     margin-top: 15%;
 }
@@ -76,7 +76,7 @@ h3 {
 #produce {
     float: right;
     
-    margin-top: -65%;
+    margin-top: -80%;
     width: 47%;
     margin-right: 5%;
 }
