--- a/css/style2.css
+++ b/css/style2.css
@@ -1,9 +1,9 @@
 body {
     background: linear-gradient(to top right, black, white);
     height: 100vh;
-    background-size: 500% auto;
+    background-size: 100% 100%;
     background-repeat: no-repeat;
-    overflow-y: hidden;
+    overflow-x: hidden;
     animation: wave 10s linear infinite;
 }
 
@@ -76,7 +76,7 @@ h3 {
 #produce {
     float: right;
     
-    margin-top: -80%;
+    margin-top: -75%;
     width: 47%;
     margin-right: 5%;
 }
