--- a/css/style.css
+++ b/css/style.css
@@ -66,11 +66,12 @@ h1 {
     float: left;
     background: white;
     width: 15%;
-    height: 50px;
+    height: 30px;
     margin: 1%;
-    margin-top: 1.3%;
-    font-size: 20pt;
-    padding-top: 2%;
+    margin-top: 3.5%;
+    font-size: 16pt;
+    padding-top: 1%;
+    padding-bottom: 1%;
     text-align: center;
     font-weight: bold;
     border-radius: 100px 100px 100px 100px;
