--- a/css/style3.css
+++ b/css/style3.css
@@ -38,6 +38,7 @@ h1 {
     font-size: 35pt;
     padding-left: 10px;
     margin-top: 40px;
+    text-shadow: 1px 1px 10px black;
 }
 
 h1 a {
@@ -65,8 +66,8 @@ h1 a {
     margin: 1%;
     margin-top: 3.5%;
     font-size: 16pt;
-    padding-top: 1%;
-    padding-bottom: 1%;
+    padding-top: 2%;
+    padding-bottom: 0%;
     text-align: center;
     font-weight: bold;
     border-radius: 100px 100px 100px 100px;
