--- a/css/style3.css
+++ b/css/style3.css
@@ -1,3 +1,9 @@
+@font-face {
+  font-family: 'TTTtangsbudaejjigaeB';
+  src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2212@1.0/TTTtangsbudaejjigaeB.woff2') format('woff2');
+  font-weight: 700;
+  font-style: normal;
+}
 @keyframes wave {
     0% {
       background-position: 0 0;
