--- a/css/style.css
+++ b/css/style.css
@@ -131,7 +131,7 @@ h1 {
 }
 
 #button {
-  width: 50px;
+  width: 40px;
   margin-left:5px;
   margin-top: 15px;
   
@@ -139,12 +139,13 @@ h1 {
 
 h2 {
   float: left;
+  font-size: 15pt;
 }
 h3 {
   float: left;
   font-size: 10pt;
-  margin-left: 20px;
-  margin-top: 30px;
+  margin-left: 30px;
+  margin-top: 25px;
   padding-bottom: 20px;
   color: white;
 }
